Tidying output to be more readable Adding dependancy on apache-commons-lang Runs are now timed